--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-praw = "*"
+praw = "7.7.1"
 redis = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.11"
