--- a/wiki-config-example.json
+++ b/wiki-config-example.json
@@ -5,9 +5,9 @@
     "send_modmail": true,
     "report_threshold": 1,
     "remove_threshold": 1,
-    "report_message": "EP {num_posts}/{report_threshold} | {post_ids} in {period}h",
-    "remove_message": "(Auto) EP {num_posts}/{report_threshold} | {post_ids} in {period}h",
-    "modmail_subject": "Test subject line {num_posts}/{remove_threshold}",
-    "modmail_message": "Test modmail message"
+    "report_message": "User has exceeded post count report limit {num_posts}/{report_threshold} | {post_ids} in {period}h",
+    "remove_message": "User exceeded post count removal limit {num_posts}/{report_threshold} | {post_ids} in {period}h",
+    "modmail_subject": "My subject line {num_posts}/{remove_threshold}",
+    "modmail_message": "My modmail message"
 }
 
